# transcriber-android

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.c
app/src/main/java/com/convoy/androidtranscriber/: MainActivity.java  ManageModelsActivity.java  ModelListAdapter.java  ResultsActivity.java  SavedOutputsActivity.java  SettingsActivity.java  SimpleTextWatcher.java
app/src/main/java/com/convoy/androidtranscriber/asr/: Whisper.java
app/src/main/java/com/convoy/androidtranscriber/engine/: WhisperCppLib.java  WhisperEngine.java  WhisperEngineJava.java  WhisperEngineWhisperCpp.java
app/src/main/java/com/convoy/androidtranscriber/util/: AppSettings.java  AssetUtils.java  AudioImportUtil.java  AudioTrimUtil.java  DiarizationUtils.java  GemmaSummaryRunner.kt  ModelUtils.java  RecorderUtil.java  StorageUtils.java  SummaryUtils.java  WaveUtil.java  WhisperUtil.java
app/src/main/res/layout/: activity_main.xml  activity_manage_models.xml  activity_results.xml  activity_saved_outputs.xml  activity_settings.xml  item_model_entry.xml
app/src/main/res/values/: strings.xml
scripts/: stage_local_models.sh
